# mxc

./: .gitignore  README.md  build.sh
.azure-pipelines/templates/: Fuzz.Build.Job.yml  Rust.Build.Job.yml
docs/: schema.md  telemetry-wil-integration.md
docs/bwrap-support/: bubblewrap-backend.md
docs/lxc-support/: lxc-backend.md
docs/proposals/downlevel_support/: appcontainer_traversal_findings.md  policy_semantics_v1.md  projfs_bindflt_summary.md
docs/proposals/downlevel_support/policy_semantics_v1_variants/: v1_d_access_denied.md  v1_d_trumps.md  v1_no_leaf.md
schemas/dev/: mxc-config.schema.0.7.0-dev.json
scripts/: apply-license-override.ps1
sdk/src/: types.ts
src/: Cargo.toml
src/backends/lxc/common/src/: network_iptables.rs
src/core/lxc/src/: main.rs
src/core/wxc/src/: main.rs
src/core/wxc_common/: Cargo.toml
src/core/wxc_common/src/: config_parser.rs  lib.rs  models.rs
src/core/wxc_common/src/telemetry/: events.rs  mod.rs
src/mxc_wil_telemetry/: Cargo.toml  build.rs
src/mxc_wil_telemetry/shim/: mxc_telemetry_shim.cpp  mxc_telemetry_shim.h
src/mxc_wil_telemetry/src/: lib.rs
src/testing/fuzz/: Cargo.toml
src/testing/fuzz/fuzz_targets/: validator.rs
src/testing/wxc_e2e_tests/src/: lib.rs
src/testing/wxc_e2e_tests/tests/: e2e_windows.rs
tests/examples/: 28_telemetry_enabled.json
tests/scripts/: run_basicprocess_test.ps1  run_dacl_tests.ps1  run_examples.ps1  run_filesystem_bfs_spaces_test.ps1  run_filesystem_bfs_test.ps1  run_filesystem_bfsreadonly_test.ps1  run_isolation_session_resize_smoke.ps1  run_isolation_session_state_aware_tests.ps1  run_isolation_session_tests.ps1  run_lpacac_test.ps1  run_microvm_basic_test.ps1  run_microvm_tests.ps1  run_processcontainer_proxy_tests.ps1  run_pwsh_test.ps1  run_telemetry_build_override_test.ps1  run_telemetry_etw_smoke_test.ps1  run_test_configs.ps1  run_windows_sandbox_tests.ps1  run_wslc_all_tests.ps1
