[workspace]
members = [
    "core/wxc",
    "core/wxc_common",
    "core/lxc",
    "core/mxc_darwin",
    "core/mxc_pty",
    "core/mxc_build_common",
    "core/generated/base_container_specification",
    "backends/appcontainer/common",
    "backends/windows_sandbox/daemon",
    "backends/windows_sandbox/guest",
    "backends/windows_sandbox/common",
    "backends/isolation_session/bindings",
    "backends/isolation_session/common",
    "backends/hyperlight/common",
    "backends/nanvix/common",
    "backends/nanvix/binaries",
    "backends/nanvix/runner",
    "backends/lxc/common",
    "backends/bubblewrap/common",
    "backends/wslc/common",
    "backends/seatbelt/common",
    "host/wxc_host_prep",
    "host/wxc_winhttp_proxy_shim",
    "testing/wxc_e2e_tests",
    "testing/wxc_test_driver",
    "testing/wxc_test_proxy",
    "testing/linux_test_proxy",
    "testing/wxc_ui_probe",
    "tools/mxc_diagnostic_console",
    "mxc_wil_telemetry",
]
exclude = ["testing/fuzz"]
resolver = "3"

# Full debug info so we can analyse customer crash dumps in WinDbg until we
# publish to a symbol server. `strip = "debuginfo"` removes embedded debug
# sections from the binary itself (mainly relevant on Linux — Windows pdbs
# are already split by `split-debuginfo = "packed"`). Full debug info still
# ships via the side-by-side .pdb / .dwp files.
[profile.release]
debug = "full"
split-debuginfo = "packed"
strip = "debuginfo"

[workspace.package]
version = "0.6.1"
edition = "2021"

[workspace.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Networking_WinSock",
    "Win32_Security_Credentials",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security_Isolation",
    "Win32_System_Variant",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_JobObjects",
] }
windows-core = "0.62"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
wxc_common = { path = "core/wxc_common" }
appcontainer_common = { path = "backends/appcontainer/common" }
windows_sandbox_common = { path = "backends/windows_sandbox/common" }
isolation_session_common = { path = "backends/isolation_session/common" }
hyperlight_common = { path = "backends/hyperlight/common" }
nanvix_runner = { path = "backends/nanvix/runner" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mount", "sched", "signal", "net", "process", "user", "term"] }
lxc_common = { path = "backends/lxc/common" }
bwrap_common = { path = "backends/bubblewrap/common" }
wslc_common = { path = "backends/wslc/common" }
isolation_session_bindings = { path = "backends/isolation_session/bindings" }
mxc_pty = { path = "core/mxc_pty" }
flatbuffers = "25"
sandbox_spec = { path = "core/generated/base_container_specification" }
mxc_wil_telemetry = { path = "mxc_wil_telemetry" }
widestring = "1"
url = "2"
winreg = "0.55"
mxc_build_common = { path = "core/mxc_build_common" }
