[package]
name = "mxc_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Excluded from the parent workspace (see ../Cargo.toml `exclude`) so that
# `cargo-fuzz`-managed Cargo.lock / target directories don't interfere with
# normal builds and so the nightly-only `libfuzzer-sys` dependency is only
# pulled in when explicitly fuzzing.

[features]
# Enable runner-specific validation in the `validator` fuzz target.
# These pull in heavier deps so they're opt-in for local dev.
hyperlight = ["dep:hyperlight_common", "hyperlight_common/hyperlight"]
isolation_session = ["dep:isolation_session_common"]
microvm = ["dep:nanvix_runner", "wxc_common/microvm"]

[dependencies]
libfuzzer-sys = "0.4"
wxc_common = { path = "../../core/wxc_common" }
nanvix_runner = { path = "../../backends/nanvix/runner", optional = true }
hyperlight_common = { path = "../../backends/hyperlight/common", optional = true }
isolation_session_common = { path = "../../backends/isolation_session/common", optional = true }

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "base64_decode"
path = "fuzz_targets/base64_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "validator"
path = "fuzz_targets/validator.rs"
test = false
doc = false
bench = false
